--- a/introduce.html
+++ b/introduce.html
@@ -77,6 +77,7 @@
       <button class="aboutme-btn">about me</button>
       <button class="education-btn">education</button>
       <button class="skill-btn">skills</button>
+      <div class="aboutme-menu-line"></div>
 
     </div> 
 
