--- a/introduce.html
+++ b/introduce.html
@@ -8,6 +8,7 @@
     <link href="./introduce.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+
     <title>let me introduce myself</title>
 </head>
 <body>
@@ -39,7 +40,7 @@
         <p>Goun Lee</p>
       </div>
 
-      <div style="overflow:hidden">
+      <div style="overflow:hidden" class="aboutme-slide-wrapper">
         <div class="aboutme-slide-container">
 
           <div class="slide-box">
@@ -92,7 +93,7 @@
       <div class="experience-circle" style="transform:translateX(1350px)">
         <a href="" style="margin-left:80px">Figma</a>
       </div>
-      <h1>Experience</h1>
+      <h1>Experiences</h1>
     </div>
 
 
@@ -181,14 +182,6 @@
 
     </div>
 
-    <div class="words">
-      <span class="w-circle"></span>
-        <p>I design and develop wab pages as a front-end developer,<br>
-          focused on developing convenience and user-friendly web.<br>
-          Yet, I have not lots of experience now, however I am most passionate developer for sure.
-        </p>
-    </div>
-
     <div class="contact">
         <div class="contact-rect">
             <p><a href="https://www.instagram.com/_goun_lee">instagram</a></p>
@@ -235,48 +228,64 @@
     $(window).on('scroll', function(){
       if (window.scrollY > 3000) {
         $('.iam-1').fadeIn(500);
+      } else {
+        $('.iam-1').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 3200) {
         $('.iam-2').fadeIn(500);
+      } else {
+        $('.iam-2').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 3400) {
         $('.iam-3').fadeIn(500);
+      } else {
+        $('.iam-3').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 3600) {
         $('.iam-4').fadeIn(500);
+      } else {
+        $('.iam-4').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 3800) {
         $('.iam-5').fadeIn(500);
+      } else {
+        $('.iam-5').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 4000) {
         $('.iam-6').fadeIn(500);
+      } else {
+        $('.iam-6').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 4100) {
         $('.iam-7').fadeIn(500);
+      } else {
+        $('.iam-7').fadeOut(500);
       }
     })
 
     $(window).on('scroll', function(){
       if (window.scrollY > 4300) {
         $('.iam-8').fadeIn(500);
+      } else {
+        $('.iam-8').fadeOut(500);
       }
     })
 
