--- a/introduce.html
+++ b/introduce.html
@@ -27,7 +27,7 @@
             <h4>Goun Lee</h4>
             <p>Junior Front-end developer &<br>
               UI UX Designer.<br>
-              creating experiences in South Korea<br>
+              Creating experiences in South Korea<br>
               from this January to present.
             </p>
           </div>
