--- a/introduce.html
+++ b/introduce.html
@@ -27,7 +27,7 @@
             <h4>Goun Lee</h4>
             <p>Junior Front-end developer &<br>
               UI UX Designer.<br>
-              Creating experiences in South Korea<br>
+              creating experiences in South Korea<br>
               from this January to present.
             </p>
           </div>
@@ -105,7 +105,7 @@
             <h4 class="iam-2">optimistic</h4>
             <h2 class="iam-3">entertaining</h2>
             <h3 class="iam-4">brave</h3>
-            <h3 class="iam-5">trandy</h3>
+            <h3 class="iam-5">trendy</h3>
             <h2 class="iam-6">challenging</h2>
             <h4 class="iam-7">joy</h4>
             <h4 class="iam-8">positive</h4>
@@ -225,6 +225,7 @@
       $('.aboutme-slide-container').css('transform', 'translateX(-200vw)');
     });
 
+
     $(window).on('scroll', function(){
       if (window.scrollY > 3000) {
         $('.iam-1').fadeIn(500);
@@ -258,7 +259,7 @@
     })
 
     $(window).on('scroll', function(){
-      if (window.scrollY > 3800) {
+      if (window.scrollY > 3700) {
         $('.iam-5').fadeIn(500);
       } else {
         $('.iam-5').fadeOut(500);
@@ -266,7 +267,7 @@
     })
 
     $(window).on('scroll', function(){
-      if (window.scrollY > 4000) {
+      if (window.scrollY > 3800) {
         $('.iam-6').fadeIn(500);
       } else {
         $('.iam-6').fadeOut(500);
@@ -274,7 +275,7 @@
     })
 
     $(window).on('scroll', function(){
-      if (window.scrollY > 4100) {
+      if (window.scrollY > 3900) {
         $('.iam-7').fadeIn(500);
       } else {
         $('.iam-7').fadeOut(500);
@@ -282,7 +283,7 @@
     })
 
     $(window).on('scroll', function(){
-      if (window.scrollY > 4300) {
+      if (window.scrollY > 4000) {
         $('.iam-8').fadeIn(500);
       } else {
         $('.iam-8').fadeOut(500);
