--- a/introduce.html
+++ b/introduce.html
@@ -45,11 +45,11 @@
 
           <div class="slide-box">
             <div class="slide-box-1">
-              <h4>
+              <h4 style="width: 800px;">
               Hello everyone ! <br>
               This is Goun Lee from South Korea.<br>
               </h4>
-              <h4>
+              <h4 style="width: 800px;">
               I design and develop web pages as a<br>
               Front-end developer, focused on<br>
               developing convenience and user-<br>
@@ -219,10 +219,10 @@
       $('.aboutme-slide-container').css('transform', 'translateX(0vw)');
     });
     $('.education-btn').on('click', function(){
-      $('.aboutme-slide-container').css('transform', 'translateX(-100vw)');
+      $('.aboutme-slide-container').css('transform', 'translateX(-800px)');
     });
     $('.skill-btn').on('click', function(){
-      $('.aboutme-slide-container').css('transform', 'translateX(-200vw)');
+      $('.aboutme-slide-container').css('transform', 'translateX(-1600px)');
     });
 
 
