--- a/introduce.html
+++ b/introduce.html
@@ -216,7 +216,7 @@
 
 
     $('.aboutme-btn').on('click', function(){
-      $('.aboutme-slide-container').css('transform', 'translateX(0vw)');
+      $('.aboutme-slide-container').css('transform', 'translateX(0px)');
     });
     $('.education-btn').on('click', function(){
       $('.aboutme-slide-container').css('transform', 'translateX(-800px)');
